08.28.2024 Fixes